--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<% title "New User" %>
+<% title t(:new_user_title) %>
 
-<%= render :partial => 'form' %>
-
+<div class="dialog">
+  <h2>Dar de alta un nuevo usuario</h2>
+  <%= render :partial => 'form' %>
+</div>
