--- a/app/views/layouts/admin.html.erb.erb
+++ b/app/views/layouts/admin.html.erb.erb
@@ -23,7 +23,7 @@
         <div id="navigation">
           <div class="sections">
             <% if signed_in? %>
-              <%= section t(:profile), survey_path %>
+              <%= section qt(:admin, :users), users_path %>
               <%= section t(:invoices), root_path %>
               <%= section t(:report), root_path, :class => 'report' %>
 
