--- a/public/stylesheets/wecex.css
+++ b/public/stylesheets/wecex.css
@@ -8,9 +8,10 @@ html {
 
 .AboutController {background-color: #A5C941;}
 .InvoicesController {background-color: #2DAEBF;}
-.ReportsController {background-color: #A9014B;}
+.SurveysController {background-color: #A9014B;}
 .ProfilesController {background-color: #FC9200;}
-.SessionsController {background-color: #0c0; }
+.UserSessionsController {background-color: #0c0; }
+.AdminSessionsController {background-color: #000;}
 .UsersController {background-color: #0c0; }
 
 
