--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
-<% title t(:new_user_title) %>
 
 <div class="dialog">
-  <h2>Dar de alta un nuevo usuario</h2>
+  <%= title qt(:user, :new_user), :tag => :h2 %>
   <%= render :partial => 'form' %>
 </div>
