--- a/public/stylesheets/wecex.css
+++ b/public/stylesheets/wecex.css
@@ -60,11 +60,13 @@ p {margin: 0.4em 0;}
 .dialog ul {margin: 1em 0 0.5em 8em;}
 .dialog ul li {list-style-type: none; margin-left: 0; margin-top: 0.2em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
+form span {margin-left: 1em;}
+form span.fieldWithErrors {float: left; margin-left: 0; border: 2px solid #c00; }
 form p.info {margin: 1em 0 0.5em 8em; color: #4F4F4F;}
 form p.save {background-color: #efefef; padding: 0.5em; margin-left: 8em; width: auto;}
 form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
     margin-right: 0.5em; margin-left: 2.5em; color: gray;}
-form span {margin-left: 1em;}
+
 #encuesta input[type=text] {width: 6em;}
 #encuesta textarea {width: 40em; height: 10em;}
 
