--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -22,7 +22,7 @@
 <% end %>
 
 
-<h1><%=  t(:titulo, :scope => [:encuesta]) %></h1>
+<h1><%=  t(:title) %></h1>
 
 <div id="encuesta">
   <% form_for(@survey, :url => survey_path) do |f| %>
