--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 
 <div class="dialog">
-  <%= title qt(:user, :new_user), :tag => :h2 %>
+  <%= title t(:title), :tag => :h2 %>
   <%= render :partial => 'form' %>
 </div>
