--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 
-<%= title qt(:admin, :users) %>
+<%= title t(:title) %>
 
 <table>
   <thead>
@@ -13,7 +13,6 @@
     <% @users.each do |user| %>
       <tr class="<%= cycle('even', 'odd') %>">
         <td><%= user.username %></td>
-        <td><%= user.last_login_at ? user.last_login_at.fecha : 'todavía no ha entrado' %> </td>
         <td></td>
       </tr>
     <% end %>
