--- a/app/views/about/spike.html.erb
+++ b/app/views/about/spike.html.erb
@@ -55,7 +55,7 @@
 
 </div>
 
-<% factura = Consumption.gas(current_user) %>
+<% factura = Invoice.gas(current_user) %>
 
 <% form_tag({:action => 'epa'}, :id => 'dataset') do %>
   <table>
