--- a/app/views/about/about.html.erb
+++ b/app/views/about/about.html.erb
@@ -1,4 +1,4 @@
-<h1>Qué es wecex</h1>
+<%= t(:title) %>
 
 <div class="help">
   <p>Esto es sólo un prototipo: aquí falta texto, imágenes, vídeos, enlaces o cualquier documentación que se quiera aportar</p>
