--- a/app/views/about/mission.html.erb
+++ b/app/views/about/mission.html.erb
@@ -1,4 +1,4 @@
-<h1>Para qué sirve wecex</h1>
+<%= title t(:title)  %>
 
 <div class="help">
   <p>Esto es sólo un prototipo: aquí falta texto, imágenes, vídeos, enlaces o cualquier documentación que se quiera aportar</p>
