--- a/app/views/about/what.html.erb
+++ b/app/views/about/what.html.erb
@@ -1,4 +1,4 @@
-<%= t(:title) %>
+<%= title t(:title) %>
 
 <div class="help">
   <p>Esto es sólo un prototipo: aquí falta texto, imágenes, vídeos, enlaces o cualquier documentación que se quiera aportar</p>
