--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -21,7 +21,7 @@
       var getChart = function(containerId) {
         if (charts[containerId] == null) {
           var current = charts[containerId] = new JSChart(containerId, 'bar');
-          current.setTitle("Evolución del consumo de electricidad")
+          current.setTitle("")
           current.setAxisNameX("mes");
           current.setAxisNameY("")
           current.setBarOpacity(0.6);
@@ -60,18 +60,22 @@
   Generando gráfico...
 </div>
 
-<% form_tag(invoice_path, :id => 'dataset') do %>
+<% form_tag(invoice_path, :id => 'dataset', :method => 'PUT') do %>
   <p class="save">
     <%= submit_tag t(:submit) %> Pulse "Guardar" cuando complete el cuestionario.
   </p>
   <table class="dataset">
     <% @invoice.months do |consumo, index| %>
-      <tr class="<%= cycle('even', 'odd'); %>">
-        <td><%= label_tag consumo.name %></td>
-        <td><%= text_field_tag "ammount[#{index}]", consumo.ammount, :class => 'data', :id => consumo.label %></td>
-        <td><span><%= @invoice.units %></span>
-        </td>
-      </tr>
+      <% fields_for("consumption[]", consumo) do |f| %>
+        <tr class="<%= cycle('even', 'odd'); %>">
+          <td><%= label_tag consumo.name %></td>
+          <td><%= f.text_field  :ammount , :class => 'data', :id => consumo.label %></td>
+          <td><span><%= @invoice.units %></span>
+          <%= f.hidden_field :id %>
+          <%= f.hidden_field :period %>
+          </td>
+        </tr>
+      <% end %>
     <% end %>
   </table>
   <p class="save">
