--- a/public/stylesheets/wecex.css
+++ b/public/stylesheets/wecex.css
@@ -7,9 +7,10 @@ html {
 }
 
 .AboutController {background-color: #A5C941;}
-.InvoicesController {background-color: #2DAEBF;}
+.ElectricidadController {background-color: #2DAEBF;}
+.GasController {background-color: #FC9200;}
 .SurveysController {background-color: #A9014B;}
-.ReportsController {background-color: #FC9200;}
+.ReportsController {background-color: #0CCF5D;}
 .UserSessionsController {background-color: #0c0; }
 .AdminSessionsController {background-color: #000;}
 .UsersController {background-color: #0c0; }
@@ -29,7 +30,7 @@ p {margin: 0.4em 0;}
 .help {margin: 1em 0; background-color: #efefef; padding: 1em; -moz-border-radius: 0.3em;}
 
 .top {width: 100%; height: 0.7em;}
-#page {width: 780px; margin: 0 auto 2em auto; background-color: white; padding: 0 1em;
+#page {width: 900px; margin: 0 auto 2em auto; background-color: white; padding: 0 1em;
     -moz-border-radius: 0 0 1em 1em;}
 
 .bottom {text-align: center; font-size: 70%; color: gray; padding: 0.5em 0;
@@ -84,13 +85,15 @@ form table td {padding: 0.2em 1em; text-align: center;}
 form table td.name {text-align: right; padding-right: 0.5em; width: 12em;}
 
 /* INVOICES */
-#chart {width: 600px; margin: 1em 0 1em 6em; border: 1em solid #efefef;}
+#chart_panel {margin: 1em 0; border: 1em solid #efefef;}
+#chart {width: 100%; margin: 0; border: 0; padding: 0;}
 table.dataset {margin-left: auto; margin-right: auto;}
 table.dataset td {padding-left: 0; padding-right: 0.2em;}
 table.dataset input {width: 4em; margin-left: 0; margin-right: 0;}
 table.dataset label {color: black; margin-right: 1em;}
 table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 
-.invoice {width: 44%; float: left; text-align: center; padding: 2%; background-color: #efefef; margin-right: 2%;
-    -moz-border-radius: 0.5em;}
-.invoice img {margin: 1em 0;}
+/* USERS */
+table.users { margin: 1em; }
+table.users thead {background-color: gray; color: white;}
+table.users td {padding: 0.2em 1em;}
