--- a/app/views/surveys/_edit_edificio_equipamiento.html.erb
+++ b/app/views/surveys/_edit_edificio_equipamiento.html.erb
@@ -17,85 +17,102 @@
   <% end %></tbody>
 </table>
 
+<!-- AGUA CALIENTE -->
 <h4><%=  t(:titulo, :scope => [:encuesta, :equipo, :agua]) %></h4>
 
-<p class="info"><%=  t(:tiene, :scope => [:encuesta, :equipo, :agua]) %></p>
-<% Survey::SINO.each do |option| %>
-  <p><%= f.radio_answer :equip_agua_caliente, option, :comun %></p>
-<% end -%>
+<div id="equip_agua_tipo" >
+  <p class="info"><%=  t(:tipo, :scope => [:encuesta, :equipo, :agua]) %></p>
+  <% Survey::EQUIP_TIPO.each do |option| %>
+    <p><%= f.radio_answer :equip_agua_caldera_tipo, option, :equipamiento %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:tipo, :scope => [:encuesta, :equipo, :agua]) %></p>
-<% Survey::EQUIP_AGUA_TIPO.each do |option| %>
-  <p><%= f.radio_answer :equip_agua_tipo, option, :equipamiento %></p>
-<% end -%>
+<div id="equip_agua_dispositivo_tipo" class="agua">
+  <p class="info"><%=  t(:dispositivo, :scope => [:encuesta, :equipo, :agua]) %></p>
+  <% Survey::EQUIP_AGUA_DISP.each do |option| %>
+    <p><%= f.radio_answer :equip_agua_tipo, option, :equipamiento %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:solar, :scope => [:encuesta, :equipo, :agua]) %></p>
-<% Survey::SINO.each do |option| %>
-  <p><%= f.radio_answer :equip_agua_solar, option, :comun %></p>
-<% end -%>
+<div class="agua">
+  <p class="info"><%=  t(:solar, :scope => [:encuesta, :equipo, :agua]) %></p>
+  <% Survey::SINO.each do |option| %>
+    <p><%= f.radio_answer :equip_agua_solar, option, :comun %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:edad, :scope => [:encuesta, :equipo, :agua]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :equip_agua_edad %></p>
+<div class="agua">
+  <p class="info"><%=  t(:edad, :scope => [:encuesta, :equipo, :agua]) %></p>
+  <p><label>&nbsp;</label><%= f.text_field :equip_agua_edad %><span>años</span></p>
+</div>
 
-<p class="info"><%=  t(:caldera_tipo, :scope => [:encuesta, :equipo, :agua]) %></p>
-<% Survey::EQUIP_TIPO_IC.each do |option| %>
-  <p><%= f.radio_answer :equip_agua_caldera_tipo, option, :equipamiento %></p>
-<% end -%>
+<div class="agua">
+  <p class="info"><%=  t(:caldera_deposito, :scope => [:encuesta, :equipo, :agua]) %></p>
+  <% Survey::SINO.each do |option| %>
+    <p><%= f.radio_answer :equip_agua_caldera_acumulacion, option, :comun %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:caldera_deposito, :scope => [:encuesta, :equipo, :agua]) %></p>
-<% Survey::SINO.each do |option| %>
-  <p><%= f.radio_answer :equip_agua_caldera_acumulacion, option, :comun %></p>
-<% end -%>
+<script type="text/javascript">
+  jQuery(function($) {
+    $.disableWhen("#equip_agua_tipo", "notengo", ".agua");
+    $.disableWhen("#equip_calefaccion_tipo", "notengo", ".calefaccion");
+  });
+</script>
 
 
 
 <h4><%=  t(:titulo, :scope => [:encuesta, :equipo, :calefaccion]) %></h4>
 
-<!-- debería desaparecer por lo de común -->
-<p class="info"><%=  t(:tiene, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<% Survey::SINO.each do |option| %>
-  <p><%= f.radio_answer :equip_calefaccion, option, :comun %></p>
-<% end -%>
+<div id="equip_calefaccion_tipo" >
+  <p class="info"><%=  t(:tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <% Survey::EQUIP_TIPO.each do |option| %>
+    <p><%= f.radio_answer :equip_calefaccion_caldera_tipo, option, :equipamiento %></p>
+  <% end -%>
+</div>
 
+<div class="calefaccion">
+  <p class="info"><%=  t(:dispositivo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <% Survey::EQUIP_CALE_TIPO.each do |option| %>
+    <p><%= f.radio_answer :equip_calefaccion_tipo, option, :equipamiento %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<% Survey::EQUIP_CALE_TIPO.each do |option| %>
-  <p><%= f.radio_answer :equip_calefaccion_tipo, option, :equipamiento %></p>
-<% end -%>
+<div class="calefaccion">
+  <p class="info"><%=  t(:estancias, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <table>
+    <thead><tr><td/><% Survey::TAN.each do |option| %><td><%= t(option, :scope => [:encuesta, :comun]) %></td><%  end -%></tr></thead>
+    <tbody>
+      <% Survey::EQUIP_DONDE.each do |donde| %>
+        <tr class="<%= cycle :odd, :even %> ">
+          <td class="name"><%= t(donde, :scope => [:encuesta, :equipamiento]) %></td>
+          <% Survey::TAN.each do |option| %>
+            <td><%= f.radio_button "equip_calefaccion_donde_#{donde}", option  %></td>
+          <% end -%>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<p class="info"><%=  t(:estancias, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<table>
-  <thead><tr><td/><% Survey::TAN.each do |option| %><td><%= t(option, :scope => [:encuesta, :comun]) %></td><%  end -%></tr></thead>
-  <tbody>
-    <% Survey::EQUIP_DONDE.each do |donde| %>
-      <tr class="<%= cycle :odd, :even %> ">
-        <td class="name"><%= t(donde, :scope => [:encuesta, :equipamiento]) %></td>
-        <% Survey::TAN.each do |option| %>
-          <td><%= f.radio_button "equip_calefaccion_donde_#{donde}", option  %></td>
-        <% end -%>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="calefaccion">
+  <p class="info"><%=  t(:caldera_misma, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <% Survey::SINO.each do |option| %>
+    <p><%= f.radio_answer :equip_calefaccion_misma, option, :comun %></p>
+  <% end -%>
+</div>
 
-<p class="info"><%=  t(:caldera_misma, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<% Survey::SINO.each do |option| %>
-  <p><%= f.radio_answer :equip_calefaccion_misma, option, :comun %></p>
-<% end -%>
+<div class="calefaccion">
+  <p class="info"><%=  t(:bomba_tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <% Survey::EQUIP_BOMBA_TIPO.each do |option| %>
+    <p><%= f.radio_answer :equip_calefaccion_bomba_tipo, option, :equipamiento %></p>
+  <% end -%>
+</div>
 
-<!-- debe desaparecer -->
-<p class="info"><%=  t(:caldera_tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<% Survey::EQUIP_TIPO_IC.each do |option| %>
-  <p><%= f.radio_answer :equip_calefaccion_caldera_tipo, option, :equipamiento %></p>
-<% end -%>
-
-<p class="info"><%=  t(:bomba_tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<% Survey::EQUIP_BOMBA_TIPO.each do |option| %>
-  <p><%= f.radio_answer :equip_calefaccion_bomba_tipo, option, :equipamiento %></p>
-<% end -%>
-
-<p class="info"><%=  t(:edad, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :equip_calefaccion_edad %></p>
+<div class="calefaccion">
+  <p class="info"><%=  t(:edad, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
+  <p><label>&nbsp;</label><%= f.text_field :equip_calefaccion_edad %></p>
+</div>
 
 <!-- AIRE ACONDICIONADO -->
 <h4><%=  t(:titulo, :scope => [:encuesta, :equipo, :aire]) %></h4>
@@ -129,11 +146,14 @@
 
 
 <p class="info"><%=  t(:individual, :scope => [:encuesta, :equipo, :aire]) %></p>
-* de ventana / * split (aparatos indipendientes)
+<% Survey::EQUIP_AC_INDIVIDUAL.each do |option| %>
+  <p><%= f.radio_answer :equip_ac_tipo, option, :equipamiento %></p>
+<% end -%>
 
 <p class="info"><%=  t(:independientes, :scope => [:encuesta, :equipo, :aire]) %></p>
-* uno fuera, varios dentro / * varios fuera, varios dentro
-
+<% Survey::EQUIP_AC_INDEPENDIENTES.each do |option| %>
+  <p><%= f.radio_answer :equip_ac_tipo, option, :equipamiento %></p>
+<% end -%>
 
 <h4><%=  t(:titulo, :scope => [:encuesta, :equipo, :dispositivos]) %></h4>
 <p class="info"><%=  t(:electrodomesticos, :scope => [:encuesta, :equipo, :dispositivos]) %></p>
