--- a/app/views/surveys/_edit_edificio_vivienda.html.erb
+++ b/app/views/surveys/_edit_edificio_vivienda.html.erb
@@ -21,15 +21,19 @@
 <% end -%>
 
 <h3><%=  t(:titulo, :scope => [:encuesta, :vivienda]) %></h3>
-
-
 <p class="info"><%=  t(:planta, :scope => [:encuesta, :vivienda]) %></p>
 <% Survey::VIVIENDA_PLANTA.each do |planta| %>
   <p><%= f.radio_answer :vivienda_planta, planta, :vivienda %></p>
 <%  end -%>
 
 <p class="info"><%=  t(:superficie, :scope => [:encuesta, :vivienda]) %></p>
-<p><label>&nbsp;</label><%= f.text_field :vivienda_superficie %></p>
+<p><label>&nbsp;</label><%= f.text_field :vivienda_superficie %><span>m<sup>2</sup></span></p>
+
+<p class="info"><%=  t(:fachada, :scope => [:encuesta, :vivienda]) %></p>
+<p><label>&nbsp;</label><%= text_field_tag :vivienda_fachada %><span>m<sup>2</sup></span></p>
+
+<p class="info"><%=  t(:acristalado, :scope => [:encuesta, :vivienda]) %></p>
+<p><label>&nbsp;</label><%= text_field_tag :vivienda_acristalado %><span>% de la fachada</span></p>
 
 
 <p class="info"><%=  t(:estancias, :scope => [:encuesta, :vivienda]) %></p>
@@ -37,6 +41,8 @@
 
 <p class="info"><%=  t(:aseos, :scope => [:encuesta, :vivienda]) %></p>
 <p><label>&nbsp;</label><%= f.text_field :vivienda_servicios %></p>
+
+
 
 <p class="info"><%=  t(:reformas, :scope => [:encuesta, :vivienda]) %></p>
 <% Survey::VIVIENDA_REFORMAS.each do |reforma| %>
