--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -15,7 +15,7 @@
     <div id="page">
       <div id="head">
         <div id="logo">
-          <h1><%= link_to 'wecex', root_path %></h1>
+              <h1><%= link_to 'E3E', root_path %></h1>
           <p>Mejorar el consumo energético</p>
         </div>
 
