--- a/app/views/surveys/_edit_edificio_equipamiento.html.erb
+++ b/app/views/surveys/_edit_edificio_equipamiento.html.erb
@@ -53,31 +53,7 @@
   <% end -%>
 </div>
 
-<script type="text/javascript">
-  jQuery(function($) {
-    $.rule("caldera", $("#si_caldera").disabled_if(function() {
-      return $("#survey_equip_agua_caldera_tipo_notengo").attr('checked') ||
-        $("#survey_equip_agua_tipo_caldera").attr('checked') == false;
-    }));
-
-    $.rule("paneles", $("#si_paneles").disabled_if(function () {
-      return $("#survey_equip_agua_caldera_tipo_notengo").attr('checked') ||
-        $("#survey_equip_agua_solar_s").attr('checked') == false;
-    }));
-    
-    $.rule("agua", $(".agua").disabled_if_checked("#survey_equip_agua_caldera_tipo_notengo"));
-    $.rule("calefaccion", $(".calefaccion").disabled_if_checked("#survey_equip_calefaccion_caldera_tipo_notengo"));
-
-    $("#equip_agua_tipo input").fires("agua", "caldera", "paneles");
-    $("#equip_agua_dispositivo_tipo input").fires("caldera");
-    $("#equip_agua_paneles input").fires("paneles");
-    $("#equip_calefaccion_tipo input").fires("calefaccion");
-  });
-
-</script>
-
-
-
+<!-- CALEFACCION -->
 <h4><%=  t(:titulo, :scope => [:encuesta, :equipo, :calefaccion]) %></h4>
 
 <div id="equip_calefaccion_tipo" >
@@ -87,7 +63,7 @@
   <% end -%>
 </div>
 
-<div class="calefaccion">
+<div id="equip_calefaccion_dispositivo_tipo" class="calefaccion">
   <p class="info"><%=  t(:dispositivo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
   <% Survey::EQUIP_CALE_TIPO.each do |option| %>
     <p><%= f.radio_answer :equip_calefaccion_tipo, option, :equipamiento %></p>
@@ -111,14 +87,14 @@
   </table>
 </div>
 
-<div class="calefaccion">
+<div id="misma_caldera" class="calefaccion">
   <p class="info"><%=  t(:caldera_misma, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
   <% Survey::SINO.each do |option| %>
     <p><%= f.radio_answer :equip_calefaccion_misma, option, :comun %></p>
   <% end -%>
 </div>
 
-<div class="calefaccion">
+<div id="si_bomba" class="calefaccion">
   <p class="info"><%=  t(:bomba_tipo, :scope => [:encuesta, :equipo, :calefaccion]) %></p>
   <% Survey::EQUIP_BOMBA_TIPO.each do |option| %>
     <p><%= f.radio_answer :equip_calefaccion_bomba_tipo, option, :equipamiento %></p>
@@ -190,6 +166,42 @@
   <% end %>
 </table>
 
+<script type="text/javascript">
+  jQuery(function($) {
+
+    $.rule("caldera", $.disable("#si_caldera"), $.when(function() {
+      return $.is_checked("#survey_equip_agua_caldera_tipo_notengo") ||
+        $.is_not_checked("#survey_equip_agua_tipo_caldera").call();
+    }));
+
+    $.rule("caldera", $("#si_caldera").disabled_if(function() {
+      return $("#survey_equip_agua_caldera_tipo_notengo").attr('checked') ||
+        $("#survey_equip_agua_tipo_caldera").attr('checked') == false;
+    }));
+
+    $.rule("paneles", $("#si_paneles").disabled_if(function () {
+      return $("#survey_equip_agua_caldera_tipo_notengo").attr('checked') ||
+        $("#survey_equip_agua_solar_s").attr('checked') == false;
+    }));
+
+    $.rule("agua", $(".agua").disabled_if_checked("#survey_equip_agua_caldera_tipo_notengo"));
+    $.rule("calefaccion", $(".calefaccion").disabled_if_checked("#survey_equip_calefaccion_caldera_tipo_notengo"));
+
+    $.rule("misma_caldera", $("#misma_caldera").enabled_if(function () {
+      return $.checked("#survey_equip_calefaccion_tipo_caldera") &&
+        $.checked("#survey_equip_agua_tipo_caldera");
+    }));
+
+
+    $.rule("bomba_calor", $.when($.checked("#survey_equip_calefaccion_tipo_bomba"), $.enable("#si_bomba")));
+
+    $("#equip_agua_tipo input").fires("agua", "caldera", "paneles");
+    $("#equip_agua_paneles input").fires("paneles");
+    $("#equip_agua_dispositivo_tipo input").fires("caldera", "misma_caldera");
+    $("#equip_calefaccion_dispositivo_tipo input").fires("misma_caldera", "bomba_calor");
+    $("#equip_calefaccion_tipo input").fires("calefaccion");
+  });
+</script>
 
 
 
